@@ -12,6 +12,7 @@ IMPROVEMENTS
 	- Tweak the clamped altitude and speed min/max values to give more usable sliders.
 	- Scale steer limiter based on atmospheric density in order to account how dynamic pressure will vary based on this value.
 	- Add the target's average radius to the vessel-avoidance detection.
+	- Use an average of the recent speed instead of the max speed in determining the turn radius.
 - GameModes:
 	- Add options for respecting the flow state of stealing (in)/stolen (out) resources.
 - UI:
